# KADAR

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  README.md  environment.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  citation-cff.yml
kadar/analysis/: __init__.py  anomaly_detection.py  ivom.py
kadar/core/: __init__.py
kadar/utils/: synthetic_data.py
kadar/visualization/: genomic_plots.py  plots.py
notebooks/: demo.ipynb
python/kadar/: __init__.py
python/kadar/analysis/: __init__.py  anomaly_detection.py  clustering.py  ivom.py  statistical_methods.py
python/kadar/core/: __init__.py  kmer_profiler.py  predictor.py
python/kadar/core/.ipynb_checkpoints/: predictor-checkpoint.py
python/kadar/utils/: __init__.py  io_handlers.py  synthetic_data.py
python/kadar/visualization/: __init__.py  genomic_plots.py  plots.py
src/: lib.rs
src/core/: ivom.rs  kmer.rs  mod.rs  predictor.rs  scanner.rs  seq.rs  types.rs
tests/: test_integration.py  test_io_handlers.py  test_kmer_profiler.py  test_synthetic_data.py
