[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kadar"
version = "0.1.0"
authors = [
    { name = "Madeleine Lutze" }]
description = "A Python package for predicting HGT"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.14"
keywords = ["bioinformatics"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>=1.19.0",
        "pandas>=1.2.0",
        "matplotlib>=3.3.0",
        "seaborn>=0.11.0",
        "scikit-learn>=1.0.0",
        "scipy>=1.7.0",
        "sourmash>=4.8.0"]

[project.optional-dependencies]
dev = [
    "isort",
    "maturin>=1.0",
    "numpydoc-validation",
    "pydocstyle",
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
]

docs = [
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
documentation = "https://github.com/m-lutze/KADAR"
homepage = "https://github.com/m-lutze/KADAR"
repository = "https://github.com/m-lutze/KADAR"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kadar._kadar"

[tool.pytest.ini_options]
addopts = "-v --cov=kadar --cov-branch --cov-report=xml --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
exclude = ["docs"]

[tool.ruff.lint]
select = [
    "C", # mccabe rules
    "F", # pyflakes rules
    "E", # pycodestyle error rules
    "W", # pycodestyle warning rules
    "B", # flake8-bugbear rules
    "I", # isort rules
    "D", # pydocstyle rules
]
ignore = [
    "C901", # max-complexity-10
    "E501", # line-too-long
    "B905", # `zip()` without an explicit `strict=` parameter
]

# Don't auto-fix docstring issues - they're too fragile
unfixable = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"] # Ignore all pydocstyle rules in tests

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["kadar"]
known-third-party = ["numpy","pandas","matplotlib","seaborn","scikit-learn","scipy","sourmash"]


[tool.isort]
profile = "black"
known_third_party = ["numpy","pandas","matplotlib","seaborn","scikit-learn","scipy","sourmash"]
known_first_party = ["kadar"]
default_section = "THIRDPARTY"
force_sort_within_sections = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [ # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
]
override_SS05 = [ # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pydocstyle]
convention = "numpy"
match-dir = "[^\\.].*"     # matches all dirs that don't start with a dot
match = "(?!test_).*\\.py" # matches files that don't start with 'test_' but end with '.py'
